Improve code quality, replacing StringBuffer with StringBuilder