@@ -519,7 +519,7 @@ public abstract class AbstractChecker
 	}
 
 	public final List<IValue> getAllValue(final int idx) {
-		return Arrays.stream(workers).map(w -> w.getLocalValue(idx)).collect(Collectors.toList());
+		return Arrays.stream(workers).map(w -> w.getLocalValue(idx)).toList();
 	}
 
 	public final IValue getValue(final int i, final int idx) {
